--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@vimesh/style": "^1.2.1",
         "@vimesh/ui": "^0.15.0",
         "alpinejs": "^3.15.0",
-        "alpinejs-tash": "^1.2.1"
+        "alpinejs-tash": "^1.2.1",
+        "lucide-vue-next": "^0.548.0"
     }
 }
