--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@vimesh/ui": "^0.15.0",
         "alpinejs": "^3.15.0",
         "alpinejs-tash": "^1.2.1",
-        "lucide-vue-next": "^0.548.0"
+        "lucide-vue-next": "^0.548.0",
+        "universal-router": "^10.0.1"
     }
 }
