--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "watch": "watch 'npm run build' ./resources/js"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
@@ -32,7 +33,7 @@
         "@vimesh/ui": "^0.15.0",
         "alpinejs": "^3.15.0",
         "alpinejs-tash": "^1.2.1",
-        "lucide-vue-next": "^0.548.0",
-        "universal-router": "^10.0.1"
+        "universal-router": "^10.0.1",
+        "watch": "^1.0.2"
     }
 }
