--- a/package.json
+++ b/package.json
@@ -5,16 +5,29 @@
     "scripts": {
         "build": "vite build",
         "dev": "vite",
-        "watch": "watch 'npm run build' ./resources/js"
+        "watch": "watch 'npm run build' ./resources/js",
+        "test": "vitest",
+        "test:ui": "vitest --ui",
+        "test:watch": "vitest --watch",
+        "test:coverage": "vitest --coverage v8",
+        "test:registry": "vitest tests/js/registry",
+        "test:dom": "vitest tests/js/dom-",
+        "test:namespace": "vitest tests/js/namespace"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "@testing-library/dom": "^10.4.1",
+        "@vitest/coverage-v8": "^4.0.15",
+        "@vitest/ui": "^4.0.15",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
+        "happy-dom": "^20.0.11",
+        "jsdom": "^27.3.0",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7",
-        "vite-plugin-static-copy": "^3.1.4"
+        "vite-plugin-static-copy": "^3.1.4",
+        "vitest": "^4.0.15"
     },
     "dependencies": {
         "@alpine-collective/toolkit": "^1.0.2",
