--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "reka-ui": "^2.7.0",
         "tailwind-merge": "^3.4.0",
         "tailwindcss": "^4.1.1",
+        "three": "^0.182.0",
         "typescript": "^5.2.2",
         "vite": "^7.0.4",
         "vue": "^3.5.13"
