--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.562.0",
+        "qrcode": "^1.5.4",
         "radix-vue": "^1.9.17",
         "reka-ui": "^2.7.0",
         "tailwind-merge": "^3.4.0",
