--- a/.env.example
+++ b/.env.example
@@ -35,7 +35,7 @@ SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=s3
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
@@ -57,11 +57,23 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+# S3 Storage Configuration
+# For Local Development with RustFS (S3-compatible):
+AWS_ACCESS_KEY_ID=sail
+AWS_SECRET_ACCESS_KEY=password
 AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+AWS_BUCKET=local
+AWS_ENDPOINT=http://rustfs:9000
+AWS_USE_PATH_STYLE_ENDPOINT=true
+
+# For Production with AWS S3:
+# AWS_ACCESS_KEY_ID=your_production_key
+# AWS_SECRET_ACCESS_KEY=your_production_secret
+# AWS_DEFAULT_REGION=us-east-1
+# AWS_BUCKET=your-production-bucket
+# AWS_URL=
+# AWS_ENDPOINT=
+# AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
@@ -74,6 +86,8 @@ FORWARD_DB_PORT=3306
 FORWARD_MAILPIT_PORT=1025
 FORWARD_MAILPIT_DASHBOARD_PORT=8025
 FORWARD_PHPMYADMIN_PORT=8080
+FORWARD_RUSTFS_PORT=9000
+FORWARD_RUSTFS_CONSOLE_PORT=9001
 
 # Sail Xdebug Configuration (uncomment to enable)
 # SAIL_XDEBUG_MODE=develop,debug,coverage
