--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,11 @@
 services:
     laravel.test:
         build:
-            context: './vendor/laravel/sail/runtimes/8.5'
+            context: ./vendor/laravel/sail/runtimes/8.5
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
-        image: 'sail-8.5/app'
+        image: sail-8.5/app
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
@@ -24,6 +24,8 @@ services:
         depends_on:
             - mysql
             - mailpit
+            - rustfs
+            - redis
     mysql:
         image: 'mysql:8.4'
         ports:
@@ -49,18 +51,6 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
-    rustfs:
-        image: 'registry.pistack.com/pistack/rustfs:latest'
-        ports:
-            - '${FORWARD_RUSTFS_PORT:-9000}:9000'
-            - '${FORWARD_RUSTFS_CONSOLE_PORT:-9001}:9001'
-        environment:
-            RUSTFS_ROOT_USER: sail
-            RUSTFS_ROOT_PASSWORD: password
-        volumes:
-            - 'sail-rustfs:/var/rustfs'
-        networks:
-            - sail
     mailpit:
         image: 'axllent/mailpit:latest'
         ports:
@@ -82,6 +72,51 @@ services:
             - sail
         depends_on:
             - mysql
+    rustfs:
+        image: 'rustfs/rustfs:latest'
+        ports:
+            - '${FORWARD_RUSTFS_PORT:-9000}:9000'
+            - '${FORWARD_RUSTFS_CONSOLE_PORT:-9001}:9001'
+        environment:
+            RUSTFS_VOLUMES: /data
+            RUSTFS_ADDRESS: '0.0.0.0:9000'
+            RUSTFS_CONSOLE_ADDRESS: '0.0.0.0:9001'
+            RUSTFS_CONSOLE_ENABLE: 'true'
+            RUSTFS_EXTERNAL_ADDRESS: ':9000'
+            RUSTFS_CORS_ALLOWED_ORIGINS: '*'
+            RUSTFS_CONSOLE_CORS_ALLOWED_ORIGINS: '*'
+            RUSTFS_ACCESS_KEY: sail
+            RUSTFS_SECRET_KEY: password
+            RUSTFS_LOG_LEVEL: info
+        volumes:
+            - 'sail-rustfs:/data'
+        networks:
+            - sail
+        healthcheck:
+            test:
+                - CMD
+                - sh
+                - '-c'
+                - 'curl -f http://127.0.0.1:9000/health && curl -f http://127.0.0.1:9001/health'
+            interval: 30s
+            timeout: 10s
+            retries: 3
+            start_period: 40s
+    redis:
+        image: 'redis:alpine'
+        ports:
+            - '${FORWARD_REDIS_PORT:-6379}:6379'
+        volumes:
+            - 'sail-redis:/data'
+        networks:
+            - sail
+        healthcheck:
+            test:
+                - CMD
+                - redis-cli
+                - ping
+            retries: 3
+            timeout: 5s
 networks:
     sail:
         driver: bridge
@@ -89,4 +124,6 @@ volumes:
     sail-mysql:
         driver: local
     sail-rustfs:
+        driver: local
+    sail-redis:
         driver: local
